mise au propre code

--- a/Composants/Account/Shared/ManageLayout.razor
+++ b/Composants/Account/Shared/ManageLayout.razor
@@ -1,5 +1,5 @@
 ﻿@inherits LayoutComponentBase
-@layout NuitInfo.Rubeus.Components.Layout.MainLayout
+@layout NuitInfo.Rubeus.Composants.Layout.MainLayout
 
 <h1>Manage your account</h1>
 
