--- a/Composants/Routes.razor
+++ b/Composants/Routes.razor
@@ -1,4 +1,4 @@
-﻿@using NuitInfo.Rubeus.Components.Account.Shared
+﻿@using NuitInfo.Rubeus.Composants.Account.Shared
 <Router AppAssembly="typeof(Program).Assembly">
     <Found Context="routeData">
         <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)">
