--- a/Composants/_Imports.razor
+++ b/Composants/_Imports.razor
@@ -8,4 +8,4 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using NuitInfo.Rubeus
-@using NuitInfo.Rubeus.Components
+@using NuitInfo.Rubeus.Composants
