--- a/Composants/App.razor
+++ b/Composants/App.razor
@@ -20,6 +20,7 @@
     <Routes />
     <script src="@Assets["_content/MudBlazor/MudBlazor.min.js"]"></script>
     <script src="_framework/blazor.web.js"></script>
+    <script src="js/snake-game.js"></script>
 </body>
 
 </html>
