--- a/Composants/Pages/Snake.razor
+++ b/Composants/Pages/Snake.razor
@@ -182,7 +182,7 @@
     {
         if (gameState?.Status == GameStatus.Playing)
         {
-            GameEngine.SetNextDirection(Direction.Up);
+            GameEngine.SetNextDirection(NuitInfo.Rubeus.Modeles.SnakeGame.Direction.Up);
         }
     }
 
@@ -191,7 +191,7 @@
     {
         if (gameState?.Status == GameStatus.Playing)
         {
-            GameEngine.SetNextDirection(Direction.Down);
+            GameEngine.SetNextDirection(NuitInfo.Rubeus.Modeles.SnakeGame.Direction.Down);
         }
     }
 
@@ -200,7 +200,7 @@
     {
         if (gameState?.Status == GameStatus.Playing)
         {
-            GameEngine.SetNextDirection(Direction.Left);
+            GameEngine.SetNextDirection(NuitInfo.Rubeus.Modeles.SnakeGame.Direction.Left);
         }
     }
 
@@ -209,7 +209,7 @@
     {
         if (gameState?.Status == GameStatus.Playing)
         {
-            GameEngine.SetNextDirection(Direction.Right);
+            GameEngine.SetNextDirection(NuitInfo.Rubeus.Modeles.SnakeGame.Direction.Right);
         }
     }
 
@@ -218,7 +218,7 @@
     {
         if (gameState?.Status == GameStatus.Playing)
         {
-            GameEngine.SetNextDirection(Direction.Up);
+            GameEngine.SetNextDirection(NuitInfo.Rubeus.Modeles.SnakeGame.Direction.Up);
         }
     }
 
@@ -227,7 +227,7 @@
     {
         if (gameState?.Status == GameStatus.Playing)
         {
-            GameEngine.SetNextDirection(Direction.Down);
+            GameEngine.SetNextDirection(NuitInfo.Rubeus.Modeles.SnakeGame.Direction.Down);
         }
     }
 
@@ -236,7 +236,7 @@
     {
         if (gameState?.Status == GameStatus.Playing)
         {
-            GameEngine.SetNextDirection(Direction.Left);
+            GameEngine.SetNextDirection(NuitInfo.Rubeus.Modeles.SnakeGame.Direction.Left);
         }
     }
 
@@ -245,7 +245,7 @@
     {
         if (gameState?.Status == GameStatus.Playing)
         {
-            GameEngine.SetNextDirection(Direction.Right);
+            GameEngine.SetNextDirection(NuitInfo.Rubeus.Modeles.SnakeGame.Direction.Right);
         }
     }
 
