--- a/Composants/SnakeGameModal.razor
+++ b/Composants/SnakeGameModal.razor
@@ -198,7 +198,7 @@
     {
         if (isOpen && gameState?.Status == GameStatus.Playing)
         {
-            GameEngine.SetNextDirection(Direction.Up);
+            GameEngine.SetNextDirection(NuitInfo.Rubeus.Modeles.SnakeGame.Direction.Up);
         }
     }
 
@@ -207,7 +207,7 @@
     {
         if (isOpen && gameState?.Status == GameStatus.Playing)
         {
-            GameEngine.SetNextDirection(Direction.Down);
+            GameEngine.SetNextDirection(NuitInfo.Rubeus.Modeles.SnakeGame.Direction.Down);
         }
     }
 
@@ -216,7 +216,7 @@
     {
         if (isOpen && gameState?.Status == GameStatus.Playing)
         {
-            GameEngine.SetNextDirection(Direction.Left);
+            GameEngine.SetNextDirection(NuitInfo.Rubeus.Modeles.SnakeGame.Direction.Left);
         }
     }
 
@@ -225,7 +225,7 @@
     {
         if (isOpen && gameState?.Status == GameStatus.Playing)
         {
-            GameEngine.SetNextDirection(Direction.Right);
+            GameEngine.SetNextDirection(NuitInfo.Rubeus.Modeles.SnakeGame.Direction.Right);
         }
     }
 
@@ -234,7 +234,7 @@
     {
         if (isOpen && gameState?.Status == GameStatus.Playing)
         {
-            GameEngine.SetNextDirection(Direction.Up);
+            GameEngine.SetNextDirection(NuitInfo.Rubeus.Modeles.SnakeGame.Direction.Up);
         }
     }
 
@@ -243,7 +243,7 @@
     {
         if (isOpen && gameState?.Status == GameStatus.Playing)
         {
-            GameEngine.SetNextDirection(Direction.Down);
+            GameEngine.SetNextDirection(NuitInfo.Rubeus.Modeles.SnakeGame.Direction.Down);
         }
     }
 
@@ -252,7 +252,7 @@
     {
         if (isOpen && gameState?.Status == GameStatus.Playing)
         {
-            GameEngine.SetNextDirection(Direction.Left);
+            GameEngine.SetNextDirection(NuitInfo.Rubeus.Modeles.SnakeGame.Direction.Left);
         }
     }
 
@@ -261,7 +261,7 @@
     {
         if (isOpen && gameState?.Status == GameStatus.Playing)
         {
-            GameEngine.SetNextDirection(Direction.Right);
+            GameEngine.SetNextDirection(NuitInfo.Rubeus.Modeles.SnakeGame.Direction.Right);
         }
     }
 
