--- a/Composants/Layout/NavMenu.razor
+++ b/Composants/Layout/NavMenu.razor
@@ -37,6 +37,12 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="pc-rescue-intro">
+                <span class="bi bi-pc-display" aria-hidden="true"></span> PC Rescue
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="auth">
                 <span class="bi bi-lock-nav-menu" aria-hidden="true"></span> Auth Required
             </NavLink>
